[project]
name = "20206205tech-python-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "PyJWT[crypto]>=2.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_vcs_release = true
upload_to_repository = false # Tắt tính năng tự publish của semantic-release để dùng uv publish ở step sau

[tool.hatch.build.targets.wheel]
packages = ["src/tech_auth"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
